[package]
name = "hades"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
web = ["wasm-bindgen"]

[dependencies]
luabins = { path = "../luabins" }
nom = "7.1"
#lz4_flex = "0.9"
lz4_flex = { git = "https://github.com/TannerRogalsky/lz4_flex", branch = "uncompressed-size-is-max" }
adler32 = "1.2"
serde_json = "1.0"

eyre = "0.6"

wasm-bindgen = { version = "0.2", optional = true }