[package]
name = "hades"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false

[profile.release]
lto = "fat"         # turn on Link-Time Optimizations
codegen-units = 1   # trade compile time with maximum optimization
opt-level = "z"     # optimize for size

[features]
web = ["wasm-bindgen"]

[dependencies]
luabins = "0.1"
nom = "7.1"
#lz4_flex = "0.9"
lz4_flex = { git = "https://github.com/TannerRogalsky/lz4_flex", branch = "uncompressed-size-is-max" }
adler32 = "1.2"
serde_json = "1.0"

eyre = "0.6"

wasm-bindgen = { version = "0.2", optional = true }